Fix #44 nbt values overflowing

--- a/res/editor.css
+++ b/res/editor.css
@@ -163,6 +163,7 @@ div:last-child > .nbt-body {
 span.nbt-value {
 	text-overflow: ellipsis;
 	overflow: hidden;
+	white-space: nowrap;
 	margin: 0 2px;
 	font-family: var(--monospace);
 }
